--- a/index.html
+++ b/index.html
@@ -28,22 +28,22 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <h1>
-<a name="fcimg---fusioncharts-to-image" class="anchor" href="#fcimg---fusioncharts-to-image"><span class="octicon octicon-link"></span></a>FCImg - FusionCharts to Image</h1>
+<h1>
+<a id="fcimg---fusioncharts-to-image" class="anchor" href="#fcimg---fusioncharts-to-image" aria-hidden="true"><span class="octicon octicon-link"></span></a>FCImg - FusionCharts to Image</h1>
 
 <p>FCImg is a third party tool to allow servers running the LAMP stack to export FusionCharts Charts as images without a need for a browser. The download includes a copy of the FusionCharts evaluation version.</p>
 
 <p><strong>Please note that you still need to purchase a license of FusionCharts. FCImg only enables server-side export.</strong></p>
 
 <h3>
-<a name="requirements-and-installation" class="anchor" href="#requirements-and-installation"><span class="octicon octicon-link"></span></a>Requirements and Installation:</h3>
+<a id="requirements-and-installation" class="anchor" href="#requirements-and-installation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Requirements and Installation:</h3>
 
 <p>Download the appropriate package for your platform and extract it in a path that your PHP Scripts can read. Currently, only PHP 5.2 or above is supported. Shared hosts are supported as long as <code>safe_mode</code> is not emabled. (Enabling <code>safe_mode</code> is not recommended and most hosts turn this off).</p>
 
 <p>Also, this package supports only licensed versions of FusionCharts 3.4 and above.</p>
 
 <h3>
-<a name="usage" class="anchor" href="#usage"><span class="octicon octicon-link"></span></a>Usage:</h3>
+<a id="usage" class="anchor" href="#usage" aria-hidden="true"><span class="octicon octicon-link"></span></a>Usage:</h3>
 
 <p>Before you proceed with using FCImg, you need to download wkhtmltoimage - a package that's used to generate the images. <strong>You need to manually download and install wkhtmltoimage and it's not included with your fcimg download</strong>. <a href="http://wkhtmltopdf.org/downloads.html">Download wkhtmltoimage here</a></p>
 
@@ -61,18 +61,21 @@
 <li>
 <code>width</code>: The width of the chart in pixels</li>
 <li>
-<code>options</code>: This is an array to configure optional parameters. This is treated as a key-value set.</li>
+<code>options</code>: This is an array to configure extra parameters. This is treated as a key-value set. However, 2 parameters are mandatory: <code>licensed_fusioncharts_js</code> and <code>licensed_fusioncharts_charts_js</code>
+</li>
+<li>
+<code>$options["licensed_fusioncharts_js"]</code>: to use a licensed version of fusioncharts, specify the path of <code>fusioncharts.js</code> available in the FusionCharts 3.4 download. This should be physical path on your hard disk.</li>
+<li>
+<code>$options["licensed_fusioncharts_charts_js"]</code>: to use a licensed version of fusioncharts, specify the path of <code>fusioncharts.charts.js</code> available in the FusionCharts 3.4 download. This should be physical path on your hard disk.</li>
 <li>
 <code>$options["imageType"]</code>: Specifies the type of the image (png/jpg). Default: png.</li>
 <li>
 <code>$options["quality"]</code>: The Image quality (0-100). Note that a higher quality might take longer to render. Default: 70.</li>
 <li>
-<code>$options["wkhtmltoimage_path"]</code>: You can override the path to wkhtmltoimage to an absolute path where the binary is present in your system</li>
-<li>
-<code>$options["licensed_fusioncharts_js"]</code>: to use a licensed version of fusioncharts, specify the path of <code>fusioncharts.js</code> available in the FusionCharts 3.4 download. This should be physical path on your hard disk.</li>
-<li>
-<code>$options["licensed_fusioncharts_charts_js"]</code>: to use a licensed version of fusioncharts, specify the path of <code>fusioncharts.charts.js</code> available in the FusionCharts 3.4 download. This should be physical path on your hard disk.</li>
-</ul><pre><code>require "fcimg/fcimg.php";
+<code>$options["wkhtmltoimage_path"]</code>: You can override the path to wkhtmltoimage to an absolute path where the binary is present in your system. Otherwise we try to auto detect the path</li>
+</ul>
+
+<pre><code>require "fcimg/fcimg.php";
 fusioncharts_to_image (
     "/var/www/report.png",           // path to image
     "Column3D.swf",                  // SWF Name. SWF File not required
@@ -89,7 +92,7 @@ fusioncharts_to_image (
 </code></pre>
 
 <h3>
-<a name="notes" class="anchor" href="#notes"><span class="octicon octicon-link"></span></a>Notes:</h3>
+<a id="notes" class="anchor" href="#notes" aria-hidden="true"><span class="octicon octicon-link"></span></a>Notes:</h3>
 
 <ul>
 <li>The conversion engine waits 1 second before capturing the state of the chart. In the event that the animation hasn't completed, the result of the chart might not be appropriate. By disabling animation, you can ensure that the exporter provides optimum results.</li>
@@ -98,14 +101,11 @@ fusioncharts_to_image (
 <li>If you're using a licensed version of FusionCharts you need to supply paths to both files: <code>fusioncharts.js</code> and <code>fusioncharts.charts.js</code>
 </li>
 </ul>
-
-<h3><a name="support" class="anchor" href="#support"><span class="octicon octicon-link"></span></a>Support and Bug Reports:</h3>
-<p>FCImg is a project developed in my spare time, and is released with the hope that people find it useful. If you find some bug or feature request, please email it to me at <a href="mailto:contact@fcimg.org">contact@fcimg.org</a>. It will help if you include details like the XML/JSON data.</p>
         </section>
 
         <aside id="sidebar">
-          <a href="https://github.com/fcimg/fcimg/releases/download/0.2.1/fcimg-0.2.1.zip" class="button">
-            <small>Version 0.2</small>
+          <a href="https://github.com/fcimg/fcimg/releases/download/0.2.2/fcimg-0.2.2.zip" class="button">
+            <small>Version 0.2.2</small>
             Download
           </a>
           <p>Compatible with PHP 5.4, Windows, Mac OSX, Linux.</p>
