--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 <code>options</code>: This is an array to configure extra parameters. This is treated as a key-value set. However, 2 parameters are mandatory: <code>licensed_fusioncharts_js</code> and <code>licensed_fusioncharts_charts_js</code>
 </li>
 <li>
-<code>$options["licensed_fusioncharts_js"]</code>: (<strong>is mandatory</strong>) specify the path of <code>fusioncharts.js</code> available in the FusionCharts 3.4 download. This should be physical path on your hard disk.</li>
+<code>$options["licensed_fusioncharts_js"]</code>: (<b>is mandatory</b>) specify the path of <code>fusioncharts.js</code> available in the FusionCharts 3.4 download. This should be physical path on your hard disk.</li>
 <li>
-<code>$options["licensed_fusioncharts_charts_js"]</code>: (<strong>is mandatory</strong>) specify the path of <code>fusioncharts.charts.js</code> available in the FusionCharts 3.4 download. This should be physical path on your hard disk.</li>
+<code>$options["licensed_fusioncharts_charts_js"]</code>: (<b>is mandatory</b>) specify the path of <code>fusioncharts.charts.js</code> available in the FusionCharts 3.4 download. This should be physical path on your hard disk.</li>
 <li>
 <code>$options["imageType"]</code>: Specifies the type of the image (png/jpg). Default: png.</li>
 <li>
